--- a/.github/workflows/test-gcloud.yml
+++ b/.github/workflows/test-gcloud.yml
@@ -16,5 +16,5 @@ jobs:
         uses: bharathkkb/github-actions/upload-cloud-storage@add-gcs-action
         with:
           credentials: ${{ secrets.GCE_SA_KEY }}
-          path: ./README.md
+          path: ./peanut.txt
           destination: mikes_new_bucket/index.html
