trying to copy index

--- a/.github/workflows/test-gcloud.yml
+++ b/.github/workflows/test-gcloud.yml
@@ -5,6 +5,9 @@ on:
     branches:
     - master
 
+env:
+  GCS_BUCKET: gs://mikes_new_bucket
+  
 
 jobs:
   print-gcloud-info:
@@ -12,9 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+       - name: Checkout
+         uses: actions/checkout@v2
+
        - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
          with:
           service_account_key: ${{ secrets.GCE_SA_KEY }}
        - run: |
            gcloud config set project ${{ secrets.GCE_PROJECT }}
-           gsutil list
+           gsutil cp ../index.html $GCS_BUCKET/index.html
