--- a/.github/workflows/test-gcloud.yml
+++ b/.github/workflows/test-gcloud.yml
@@ -23,4 +23,4 @@ jobs:
           service_account_key: ${{ secrets.GCE_SA_KEY }}
        - run: |
            gcloud config set project ${{ secrets.GCE_PROJECT }}
-           gsutil list
+           gsutil cp $GITHUB_WORKSPACE/index.html $GCS_BUCKET/index.html
